@@ -1,3 +1,2 @@
-EBUILD java-config-2.0.9999.ebuild 1537 RMD160 158b63fb99abb6e7b99270c722e6beccb063be84 SHA1 cbda2cf3494fa06a04acad93bdc0b74de482b838 SHA256 ad490bbc7431a6b8944a0304d7e8881caa1ecba70436e75ab846b902da4cc895
 EBUILD java-config-2.1.9999.ebuild 1521 RMD160 474afe3f82d05b52bbade143b8c28b45118f5652 SHA1 60f1a2dc51244cba59761e0279f5dbc5fb84893c SHA256 53787d64372c66e221370a98b08b4a9201b20193d63451077a594556b8bee2d9
-MISC ChangeLog 256 RMD160 89f9a792504adee6a58fb85c8546db6fb7c389b7 SHA1 a6d5e2b58db01fd0429048e090f53178132a2e13 SHA256 47b1834b741a71490e624f9377cd4525f2c3e5b7467a2b8f3982b3bc91fc5c68
+MISC ChangeLog 363 RMD160 870461b10cf4d0172157b9ba4d8acbe98f05292e SHA1 94fd8d8c9dd11aed5cba7032622b9f7be6d84ebe SHA256 a65e110b1925b80f936d2ede38297745a0fc35b951069f6ab1b16a881135f1e9
